Fixed spacing of nav bar.

--- a/Static/css/main.css
+++ b/Static/css/main.css
@@ -1,10 +1,10 @@
 body {
-    padding-top: 60px;
+    padding-top: 80px;
 }
 
 @media (max-width: 979px) {
     body {
-        padding-top: 40px;
+        padding-top: 60px;
     }
 }
 
